минимизировал блок "Быстрые действия"
